--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
     
     <div class="marquee">
-        <span class="blink">!</span> AVULUS все еще без трофеев <span class="blink">!</span> Последнее обновление: никогда <span class="blink">!</span> Время идет <span class="blink">!</span> Счетчик начал отсчет 25 октября 2024 года в 21:00 <span class="blink">!</span> AVULUS все еще без трофеев <span class="blink">!</span>
+        <span class="blink">!</span> AVULUS все еще без трофеев <span class="blink">!</span> Денег проёбано на ставках: $2308 <span class="blink">!</span> Счетчик начал отсчет с победы на RES Regional Finals <span class="blink">!</span> AVULUS все еще без трофеев <span class="blink">!</span>
     </div>
     
     <audio id="bgMusic" loop autoplay>
@@ -236,8 +236,8 @@
                 en: "seconds"
             },
             marquee: {
-                ru: "AVULUS все еще без трофеев ! Последнее обновление: никогда ! Время идет ! Счетчик начал отсчет 25 октября 2024 года в 21:00 ! AVULUS все еще без трофеев !",
-                en: "AVULUS is still trophy-less ! Last update: never ! Time is ticking ! Counter started on October 25, 2024 at 21:00 ! AVULUS is still trophy-less !"
+                ru: "AVULUS все еще без трофеев ! Денег проёбано на ставках: $2308 ! Счетчик начал отсчет 25 октября 2024 года в 21:00 ! AVULUS все еще без трофеев !",
+                en: "AVULUS is still trophy-less ! Money lost on bets: $2,308 ! Counter started on October 25, 2024 at 21:00 ! AVULUS is still trophy-less !"
             },
             visitors: {
                 ru: "посетителей",
