--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                 en: "seconds"
             },
             marquee: {
-                ru: "AVULUS все еще без трофеев ! Денег проёбано на ставках: $2308 ! Счетчик начал отсчет 25 октября 2024 года в 21:00 ! AVULUS все еще без трофеев !",
-                en: "AVULUS is still trophy-less ! Money lost on bets: $2,308 ! Counter started on October 25, 2024 at 21:00 ! AVULUS is still trophy-less !"
+                ru: "AVULUS все еще без трофеев ! Денег проёбано на ставках: $2308 ! Счетчик начал отсчет с победы на RES 25 октября 2024 года в 21:00 ! AVULUS все еще без трофеев !",
+                en: "AVULUS is still trophy-less ! Money lost on bets: $2,308 ! The counter started counting down from the victory at RES on October 25, 2024, at 9:00 p.m. ! AVULUS is still trophy-less !"
             },
             visitors: {
                 ru: "посетителей",
